Story 6 backend and frontend
