# server/src/repositories/ReportRepository.ts
@@ -1,4 +1,4 @@
-import { ReportDAO } from "@daos/ReportDAO";
+import { ReportDAO, ReportStatus } from "@daos/ReportDAO";
 import { AppDataSource } from "@database";
 import { Repository } from "typeorm";
 
@@ -11,6 +11,18 @@ export class ReportRepository {
     }
 
     createReport = async (report: ReportDAO): Promise<ReportDAO> => {
+        return this.repo.save(report);
+    }
+
+    findReportsByStatus = async (status: ReportStatus): Promise<ReportDAO[]> => {
+        return this.repo.find({ where: { status }, relations: ["category", "createdBy"] });
+    }
+
+    findReportById = async (id: number): Promise<ReportDAO | null> => {
+        return this.repo.findOne({ where: { id }, relations: ["category", "category.office", "createdBy", "assignedTo"] });
+    }
+
+    save = async (report: ReportDAO): Promise<ReportDAO> => {
         return this.repo.save(report);
     }
 }
