# server/src/routes/report.routes.ts
@@ -7,5 +7,16 @@ const router = Router();
 
 router.post('/', authMiddleware([UserType.CITIZEN]), reportController.createReport);
 router.post('/telegram', reportController.createReportFromTelegram);
+router.get('/', reportController.getReportsByStatus);
+router.put(
+    '/:id/category',
+    authMiddleware([UserType.PUBLIC_RELATIONS_OFFICER, UserType.MUNICIPAL_ADMINISTRATOR]),
+    reportController.updateReportCategory
+);
+router.put(
+    '/:id/status',
+    authMiddleware([UserType.PUBLIC_RELATIONS_OFFICER]),
+    reportController.updateReportStatus
+);
 
 export const reportRouter = router;
